--- a/live2d/css/live2d.css
+++ b/live2d/css/live2d.css
@@ -1,9 +1,9 @@
 #landlord {
     user-select: none;
     position: fixed;
-    left: 30px;
+    right: 0;
     bottom: 0;
-    width: 280px;
+    width: 310px;
     height: 250px;
     z-index: 10000;
     font-size: 0;
@@ -20,7 +20,7 @@
     height: auto;
     margin: auto;
     padding: 7px;
-    top: -80px;
+    top: -60px;
     left: -10px;
     text-align: center;
     border: 1px solid rgba(255,137,255,.4);
